[tool.poetry]
name = "tic_tac_toe"
version = "0.1.0"
description = "API to play tic tac toe game"
authors = ["le_woudar <kevin.tewouda@gandi.net>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.70.0"
ormar = {extras = ["sqlite"], version = "^0.10.22"}
pydantic = "^1.8.2"
aiosqlite = "^0.17.0"
alembic = "^1.7.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
uvicorn = "^0.15.0"
httpie = "^2.6.0"
async-asgi-testclient = "^1.4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
